--- a/.github/workflows/ci-node.yml
+++ b/.github/workflows/ci-node.yml
@@ -35,7 +35,7 @@ jobs:
           cache: "npm"
 
       - run: npm ci
-      - run: npm run lint
+      - run: npm run lint --if-present
 
   test:
     name: Test (Node ${{ matrix.node-version }})
@@ -71,7 +71,7 @@ jobs:
           cache: "npm"
 
       - run: npm ci
-      - run: npm run build
+      - run: npm run build --if-present
 
   audit:
     name: Security Audit
