fix(ci): split test coverage from compat matrix, update actions
go test -coverprofile on main packages fails when the Go matrix
triggers toolchain auto-download (covdata tool missing). Coverage
is only consumed on the lint-go-version, so generating it on compat
versions was wasted work that broke repos with cmd/ dirs.

Split into two steps: plain go test -race on compat versions,
coverage only on lint-go-version. Uses GHA if: conditions instead
of shell branching.

Also bumps actions/checkout v4->v6, golangci-lint-action v7->v9.

--- a/.github/workflows/ci-go.yml
+++ b/.github/workflows/ci-go.yml
@@ -73,6 +73,11 @@ jobs:
           go-version: ${{ matrix.go-version }}
 
       - name: Run tests
+        if: matrix.go-version != inputs.lint-go-version
+        run: go test -race ./...
+
+      - name: Run tests with coverage
+        if: matrix.go-version == inputs.lint-go-version
         run: go test -race -coverprofile=coverage.out -covermode=atomic ./...
 
       - name: Check coverage threshold
